--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>The Digital Anon: A Digital, Genetic Edition of Virginia Woolf's Final Essays</title>
+    <title>The Digital Anon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
